simplified turnover screener

--- a/11_screeners.ipynb
+++ b/11_screeners.ipynb
@@ -7,16 +7,20 @@
     "# 11. Simulating screeners\n",
     "In backtesting, we should be able to simulate what a screener would have given, else we would have to simulate all stocks simultaneously. Because this is a computationally expensive thing to do, the results are saved in the <code>output/screens</code> folder. There are of course some constraints to this. It should be technically possible to get the results from screeners, either online or via APIs (e.g. IBKR TWS). This means that intraday scanners are limited. For long-term screeners it does not matter because we can actually download everything after the end of the trading day.\n",
     "\n",
-    "Warning: The screener results should not suffer from look-ahead bias. If you e.g. want to calculate the 14-day volume, you can only know this after day 14. So I always shift the trading days by 1 to account for this. Then all statistics should be available at the corresponding date."
+    "Warning: The screener results should not suffer from look-ahead bias. If you e.g. want to calculate the 14-day volume, you can only know this after day 14. So I always shift the trading days by 1 to account for this. Then all statistics should be available at the corresponding date.\n",
+    "\n",
+    "The screeners produce watchlists. There are two types:\n",
+    "* Daily watchlists. These have a value for every day and the key is a date.\n",
+    "* Intraday watchlists. The keys are datetimes, however there may not be a ticker list for every minute (to save time)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils import remove_extended_hours, get_market_dates, get_tickers, get_data, \\\n",
+    "from utils import remove_extended_hours, get_market_dates, get_market_calendar, get_tickers, get_data, \\\n",
     "    first_trading_date_after_equal, first_trading_date_after, last_trading_date_before, last_trading_date_before_equal\n",
     "from datetime import datetime, date, timedelta, time\n",
     "from dateutil.relativedelta import relativedelta\n",
@@ -28,7 +32,10 @@
     "import pyarrow as pa\n",
     "import pyarrow.parquet as pq\n",
     "import ast\n",
-    "DATA_PATH = \"../data/polygon/\""
+    "DATA_PATH = \"../data/polygon/\"\n",
+    "\n",
+    "START_DATE = date(2019, 6, 1)\n",
+    "END_DATE = date(2024, 3, 1)"
    ]
   },
   {
@@ -39,20 +46,7 @@
     "\n",
     "In backtesting, instead of screening all stocks, for most systems I only need e.g. the S&P500 stocks. However I don't care about the exact holdings of the S&P500. The only reason why I would choose the index is because of volume and liquidity. However then turnover is way more informative.\n",
     "\n",
-    "So to create the T100, T500, T1500 and T3000 indices, I simply select the stocks with the higher turnover in the past half year."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# https://databento.com/docs/examples/equities/equities-premarket-movers/example\n",
-    "tickers = get_tickers()\n",
-    "tickers = tickers[tickers['type'] == 'CS'] # No ETFs, ADRs and indices\n",
-    "dates_and_IDs = {} # {'2022-01-01': ['AAPL', 'MSFT', ...], '2022-07-01': ['NVDA', 'AMD', ...], ...}\n",
-    "tickers = tickers.head(2000)"
+    "So to create the T100, T500, T1500 and T3000 indices, I simply select the stocks with the highest turnover in each 6-month period."
    ]
   },
   {
@@ -61,106 +55,64 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "tickers = get_tickers()\n",
+    "tickers = tickers[tickers['type'] == 'CS'] # No ETFs, ADRs and indices\n",
+    "dates_and_IDs = {} # {'2022-01-01': ['AAPL', 'MSFT', ...], '2022-07-01': ['NVDA', 'AMD', ...], ...}\n",
+    "\n",
     "# Loop through half years\n",
-    "for end_datetime in pd.date_range(start=date(2019, 6, 1),end=date(2024, 3, 1),freq='6M', inclusive='right'):\n",
+    "for end_datetime in pd.date_range(start= START_DATE ,end = END_DATE,freq='6M', inclusive='right'):\n",
     "    start_date = end_datetime.date() - relativedelta(months=6)\n",
     "    # Get trading dates\n",
     "    end_date = last_trading_date_before_equal(end_datetime.date())\n",
-    "    end_date = last_trading_date_before(end_date) # Subtract 1 day to account for look-ahead bias\n",
+    "    end_date_to_query = last_trading_date_before(end_date) # Subtract 1 day to account for look-ahead bias\n",
     "    start_date = first_trading_date_after_equal(start_date)\n",
     "\n",
     "    all_bars = []\n",
     "    # Find IDs with data in the specific half year that are not delisted before end of year\n",
-    "    for _, row in tickers[tickers['end_date'] >= end_date].iterrows():\n",
-    "        all_bars.append(get_data(row['ID'], start_date, end_date, columns=['close', 'volume']))\n",
-    "\n",
-    "    # Concatenate (close and volume only), it will be around 1 million rows and just 3 columns, so it's feasible\n",
+    "    for i, row in tickers[tickers['end_date'] >= end_date_to_query].iterrows():\n",
+    "        bars = get_data(row['ID'], start_date, end_date_to_query, columns=['close', 'volume'])\n",
+    "        bars['ID'] = row['ID']\n",
+    "        all_bars.append(bars)\n",
+    "        \n",
     "    # Calculate turnover\n",
-    "    # all_bars = all_bars.groupby(\"ID\").agg({\"volume\": \"sum\", \"close\": \"avg\"})\n",
-    "    # all_bars['turnover'] = all_bars['close'] * all_bars['volume']\n",
-    "    # all_bars.sort_values(by=\"change\", ascending=False, inplace=True)\n",
-    "    # dates_and_IDs[DATE] = list(all_bars.head(500).index)\n",
+    "    all_tickers = pd.concat(all_bars)\n",
+    "    all_tickers = all_tickers.groupby(\"ID\").agg({\"volume\": \"sum\", \"close\": \"mean\"})\n",
+    "    all_tickers['turnover'] = all_tickers['close'] * all_tickers['volume']\n",
+    "    all_tickers = all_tickers[['turnover']]\n",
+    "    all_tickers.sort_values(by=\"turnover\", ascending=False, inplace=True)\n",
+    "    dates_and_IDs[end_date.isoformat()] = list(all_tickers.head(500).index)\n",
+    "    print(end_datetime)\n",
     "\n",
-    "# Reindex to all trading days\n",
-    "\n",
-    "# Store to json\n"
+    "# Store to json\n",
+    "with open('../data/output/dailyscreens/T500.json', 'w') as f: \n",
+    "    json.dump(dates_and_IDs, f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 123,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['AMZN-2019-06-03',\n",
+       " 'AAPL-2019-06-03',\n",
+       " 'META-2022-06-09',\n",
+       " 'MSFT-2019-06-03',\n",
+       " 'AMD-2019-06-03']"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def store_top_n_liquid(n=500, start = date(2000, 1, 1), end = date(2100, 1, 1)):\n",
-    "    \"\"\"Calculated the top N liquid stocks per quarter and stores them in processed/cache/top_{n}_liquid.json\n",
+    "with open('../data/output/dailyscreens/T500.json', 'r') as f: \n",
+    "    T500 = json.load(f)\n",
     "\n",
-    "    Args:\n",
-    "        n (int, optional): the amount of stocks. Defaults to 500.\n",
-    "        start (date, optional): the start date. Defaults to date(2000, 1, 1).\n",
-    "        end (date, optional): the end date. Defaults to date(2100, 1, 1).\n",
-    "    \"\"\"\n",
-    "    tickers = get_tickers()\n",
-    "    tickers = tickers[tickers['type'] == \"CS\"]\n",
-    "\n",
-    "    dates_and_IDs = {} # {'2022-01-01': ['AAPL', 'MSFT', ...], '2022-04-01': ['NVDA', 'AMD', ...], ...}\n",
-    "\n",
-    "    quarterly_all = pd.DataFrame() # Rows are dates, columns are turnovers, column names are IDs\n",
-    "    for index, id in enumerate(tickers['ID']):\n",
-    "        bars = get_data(id, columns=['volume', 'close'], start=start, end=end)\n",
-    "        quarterly = bars.resample('Q').agg({'close': 'last',\n",
-    "                                'volume': 'sum'})\n",
-    "        quarterly['turnover'] = quarterly['volume'] * quarterly['close']\n",
-    "        quarterly = quarterly.rename(columns={'turnover': id}).drop(columns=['volume', 'close'])\n",
-    "        quarterly_all = quarterly_all.merge(quarterly[id], how='outer', left_index=True, right_index=True)\n",
-    "        #print(index)\n",
-    "        \n",
-    "        # Avoids defragmentation, increasing performance. Without this it would take more than 4x longer.\n",
-    "        if index % 100 == 0 and index != 0:\n",
-    "            quarterly_all = quarterly_all.copy()\n",
-    "            print(index)\n",
-    "\n",
-    "    # Store results in dates_and_IDs\n",
-    "    for datetime_, row in quarterly_all.copy().iterrows():\n",
-    "        top_n_stocks = row[row.notna()].nlargest(n).index.tolist()\n",
-    "        next_trading_date = first_trading_date_after_equal(datetime_.to_pydatetime().date() + timedelta(days=1))\n",
-    "        dates_and_IDs[next_trading_date.isoformat()] = top_n_stocks\n",
-    "\n",
-    "    # Store to json (csv is not a convenient format to store variable length lists)\n",
-    "    with open(DATA_PATH + f'processed/cache/top_{n}_liquid.json', 'w') as f: \n",
-    "        json.dump(dates_and_IDs, f)\n",
-    "    return\n",
-    "\n",
-    "def get_top_n_liquid(day, n=500):\n",
-    "    \"\"\"Retrieve the top liquid N stocks. If no cache exists, calculate them.\n",
-    "\n",
-    "    Args:\n",
-    "        day (date): the date to query\n",
-    "        n (int, optional): the amount of stocks to query. Defaults to 500.\n",
-    "\n",
-    "    Returns:\n",
-    "        list: list of IDs\n",
-    "    \"\"\"\n",
-    "    if not os.path.isfile(DATA_PATH + f'processed/cache/top_{n}_liquid.json'):\n",
-    "        store_top_n_liquid(n)\n",
-    "        \n",
-    "    with open(DATA_PATH + f'processed/cache/top_{n}_liquid.json', 'r') as f:\n",
-    "        data = json.load(f)\n",
-    "\n",
-    "    dates = list(data.keys())\n",
-    "    date_to_query = max(list(filter(lambda x: x <= day.isoformat(), dates)) )\n",
-    "    return date_to_query, data[date_to_query]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "day, data = get_top_n_liquid(date(2023, 8, 25), n=3000)\n",
-    "print(day)\n",
-    "print(data[:5])"
+    "T500[date(2019, 6, 28).isoformat()][:5]"
    ]
   },
   {
