--- a/11_screeners.ipynb
+++ b/11_screeners.ipynb
@@ -7,21 +7,17 @@
     "# 11. Simulating screeners\n",
     "In backtesting, we should be able to simulate what a screener would have given, else we would have to simulate all stocks simultaneously. Because this is a computationally expensive thing to do, the results are saved in the <code>output/screens</code> folder. There are of course some constraints to this. It should be technically possible to get the results from screeners, either online or via APIs (e.g. IBKR TWS). This means that intraday scanners are limited. For long-term screeners it does not matter because we can actually download everything after the end of the trading day.\n",
     "\n",
-    "Warning: The screener results should not suffer from look-ahead bias. If you e.g. want to calculate the 14-day volume, you can only know this after day 14. So I always shift the trading days by 1 to account for this. Then all statistics should be available at the corresponding date.\n",
-    "\n",
-    "The screeners produce watchlists. There are two types:\n",
-    "* Daily watchlists. These have a value for every day and the key is a date.\n",
-    "* Intraday watchlists. The keys are datetimes, however there may not be a ticker list for every minute (to save time)."
+    "Warning: The screener results should not suffer from look-ahead bias. If you e.g. want to calculate the 14-day volume on day 1, you only have this available at the end of day 1. To account for this, sometimes you need to subtract 1 day when doing the calculations."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "from utils import remove_extended_hours, get_market_dates, get_market_calendar, get_tickers, get_data, \\\n",
-    "    first_trading_date_after_equal, first_trading_date_after, last_trading_date_before, last_trading_date_before_equal\n",
+    "    first_trading_date_after_equal, first_trading_date_after, get_id, last_trading_date_before, last_trading_date_before_equal\n",
     "from datetime import datetime, date, timedelta, time\n",
     "from dateutil.relativedelta import relativedelta\n",
     "import mplfinance as mpf\n",
@@ -81,6 +77,7 @@
     "    all_tickers = all_tickers[['turnover']]\n",
     "    all_tickers.sort_values(by=\"turnover\", ascending=False, inplace=True)\n",
     "    dates_and_IDs[end_date.isoformat()] = list(all_tickers.head(500).index)\n",
+    "    \n",
     "    print(end_datetime)\n",
     "\n",
     "# Store to json\n",
@@ -119,76 +116,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Top winners/losers**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def store_top_movers(sign, percentage, time_, start = date(2000, 1, 1), end = date(2100, 1, 1)):\n",
-    "    \"\"\"Store the top gainers/losers (compared to previous close) if percentage is above threshold in processed/cache/gainers_{sign}p{percentage}_t{time}.json\n",
-    "    This is done for every day and specified time. \n",
-    "\n",
-    "    Args:\n",
-    "        sign (string): either '+' or '-' for winners or losers\n",
-    "        percentage (float/int): the percentage threshold\n",
-    "        time_ (time): the time to calculate the change each day\n",
-    "        start (date, optional): the start date. Defaults to date(2000, 1, 1).\n",
-    "        end (date, optional): the end date. Defaults to date(2100, 1, 1).\n",
-    "    \"\"\"\n",
-    "    tickers = get_tickers()\n",
-    "    tickers = tickers[tickers['type'].isin(['CS', 'ADRC'])]\n",
-    "\n",
-    "    dates = get_market_dates()\n",
-    "    dates = [day for day in dates if (day >= start and day <= end)] # Filter dates\n",
-    "    dates_and_IDs = {day.isoformat(): list() for day in dates} # Create dictionary with empty lists\n",
-    "\n",
-    "    for index, row in tickers.iterrows():\n",
-    "        id = row['ID']\n",
-    "        daily = get_data(id, columns=['close'], start=start, end=end)\n",
-    "        daily['prev_close'] = daily['close'].shift(1)\n",
-    "        minute = get_data(id, timeframe=1, columns=['close'], start=start, end=end)\n",
-    "        minute.rename(columns={'close': 'close_at_time'}, inplace=True)\n",
-    "\n",
-    "        # If there is no data between the start and end date, skip the ticker\n",
-    "        if daily.empty or minute.empty:\n",
-    "            continue\n",
-    "\n",
-    "        # TO REMOVE\n",
-    "        minute = minute[~minute.index.duplicated()]\n",
-    "        daily = daily[~daily.index.duplicated()]\n",
-    "\n",
-    "        # Build our data for this ticker\n",
-    "        data = minute.between_time(time_, time_)\n",
-    "        data.index = pd.DatetimeIndex(data.index).normalize() # Remove the 'time' part, which mean setting at 00:00 in order to merge with daily data\n",
-    "\n",
-    "        data = pd.concat([data, daily[['prev_close']]], axis=1)\n",
-    "        data['change'] = 100*(data['close_at_time'] / data['prev_close'] - 1)\n",
-    "\n",
-    "        # Select the dates that had a change higher/lower than the threshold\n",
-    "        if sign == '+':\n",
-    "            mover_dates = data[data.change > percentage].index\n",
-    "        elif sign == '-':\n",
-    "            mover_dates = data[data.change < percentage].index\n",
-    "\n",
-    "        mover_dates = pd.to_datetime(mover_dates).date\n",
-    "\n",
-    "        # Put it in the dictionary\n",
-    "        for day in mover_dates:\n",
-    "            dates_and_IDs[day.isoformat()].append(id)\n",
-    "        \n",
-    "        # For timing\n",
-    "        if index % 250 == 0:\n",
-    "            print(index)\n",
-    "\n",
-    "    # Store to json\n",
-    "    with open(DATA_PATH + f'processed/cache/movers_p{percentage}{sign}_t{time_.strftime(\"%H%M\")}.json', 'w') as f: \n",
-    "        json.dump(dates_and_IDs, f)\n",
-    "\n",
-    "    return"
+    "**More than 20% intraday droppers**\n",
+    "* Open to 5 minutes before close\n",
+    "* Turnover for the day has to be at least $10M\n",
+    "* Original price has to be above $1"
    ]
   },
   {
@@ -197,85 +128,179 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "store_top_movers(sign = '+', percentage = 20, time_ = time(13, 00), start = date(2019, 1, 1), end = date(2023, 9, 1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def store_top_intraday_movers(sign, percentage, time_, start = date(2000, 1, 1), end = date(2100, 1, 1)):\n",
-    "    \"\"\"Store the top intraday gainers/losers (compared to daily open) if percentage is above threshold in processed/cache/gainers_{sign}p{percentage}_t{time}.json\n",
-    "    This is done for every day and specified time. \n",
+    "tickers = get_tickers()\n",
+    "tickers = tickers[tickers['type'].isin(['CS', 'ADRC'])]\n",
     "\n",
-    "    Args:\n",
-    "        sign (string): either '+' or '-' for winners or losers\n",
-    "        percentage (float/int): the percentage threshold\n",
-    "        time_ (time): the time to calculate the change each day\n",
-    "        start (date, optional): the start date. Defaults to date(2000, 1, 1).\n",
-    "        end (date, optional): the end date. Defaults to date(2100, 1, 1).\n",
-    "    \"\"\"\n",
-    "    tickers = get_tickers()\n",
-    "    tickers = tickers[tickers['type'].isin(['CS', 'ADRC'])]\n",
+    "# Get list of market dates within our range\n",
+    "dates = get_market_dates()\n",
+    "dates = [day for day in dates if (day >= START_DATE and day <= END_DATE)]\n",
+    "dates_and_IDs = {day.isoformat(): list() for day in dates} # Create dictionary with empty lists\n",
     "\n",
-    "    dates = get_market_dates()\n",
-    "    dates = [day for day in dates if (day >= start and day <= end)] # Filter dates\n",
-    "    dates_and_IDs = {day.isoformat(): list() for day in dates} # Create dictionary with empty lists\n",
+    "# Get market calendar in order to handle early closes\n",
+    "market_calendar = get_market_calendar(format='datetime')[['regular_close']]\n",
     "\n",
-    "    for index, row in tickers.iterrows():\n",
-    "        id = row['ID']\n",
-    "        daily = get_data(id, columns=['open'], start=start, end=end)\n",
-    "        minute = get_data(id, timeframe=1, columns=['close'], start=start, end=end)\n",
-    "        minute.rename(columns={'close': 'close_at_time'}, inplace=True)\n",
+    "for index, row in tickers.iterrows():\n",
+    "    id = row['ID']\n",
+    "    \n",
+    "    m1 = get_data(id, START_DATE, END_DATE, timeframe=5, regular_hours_only=True, \\\n",
+    "                  columns=['open', 'close', 'volume', 'close_original'])\n",
     "\n",
-    "        # If there is no data between the start and end date, skip the ticker\n",
-    "        if daily.empty or minute.empty:\n",
-    "            continue\n",
+    "    if m1.empty:\n",
+    "        continue\n",
     "\n",
-    "        # # TO REMOVE\n",
-    "        # minute = minute[~minute.index.duplicated()]\n",
-    "        # daily = daily[~daily.index.duplicated()]\n",
+    "    m1_open = m1[['open']]\n",
+    "    m1_close = m1[['close', 'close_original']]\n",
+    "    m1_volume = m1[['close', 'volume']]\n",
+    "    \n",
+    "    # For every day, get the open price at 9:30 and close price 5 minutes before market close\n",
+    "    m1_open = m1_open.between_time('9:30', '9:30')\n",
+    "    m1_open.index = m1_open.index.date\n",
+    "    \n",
+    "    m1_close = m1_close.reindex(market_calendar['regular_close'] - timedelta(minutes=4)).dropna()\n",
+    "    m1_close.index = m1_close.index.date\n",
     "\n",
-    "        # Build our data for this ticker\n",
-    "        data = minute.between_time(time_, time_)\n",
-    "        data.index = pd.DatetimeIndex(data.index).normalize() # Remove the 'time' part, which mean setting at 00:00 in order to merge with daily data\n",
+    "    # Get the turnover (ignoring early closes...)\n",
+    "    m1_volume = m1_volume.between_time('9:30', '15:54')\n",
+    "    m1_volume.index = m1_volume.index.date\n",
+    "    m1_volume = m1_volume.groupby(m1_volume.index).agg({\"close\": \"mean\", \"volume\": \"sum\"})\n",
+    "    m1_volume['turnover'] = m1_volume['close'] * m1_volume['volume']\n",
+    "    m1_volume = m1_volume[['turnover']]\n",
     "\n",
-    "        data = pd.concat([data, daily[['open']]], axis=1)\n",
-    "        data['change'] = 100*(data['close_at_time'] / data['open'] - 1)\n",
+    "    # Calculate the drop and append to dates_and_IDs\n",
+    "    m1_open_close = pd.concat([m1_open, m1_close, m1_volume], axis='columns')\n",
+    "    m1_open_close['change'] = (1 - m1_open_close['close']/m1_open_close['open'])*100 # Base 100\n",
+    "    big_drop = m1_open_close[(m1_open_close['change'] < -20) \\\n",
+    "                           & (m1_open_close['close_original'] >= 1.00)\\\n",
+    "                           & (m1_open_close['turnover'] >= 10e7)]\n",
     "\n",
-    "        # Select the dates that had a change higher/lower than the threshold\n",
-    "        if sign == '+':\n",
-    "            mover_dates = data[data.change > percentage].index\n",
-    "        elif sign == '-':\n",
-    "            mover_dates = data[data.change < percentage].index\n",
-    "\n",
-    "        mover_dates = pd.to_datetime(mover_dates).date\n",
-    "\n",
-    "        # Put it in the dictionary\n",
-    "        for day in mover_dates:\n",
-    "            dates_and_IDs[day.isoformat()].append(id)\n",
+    "    for day in big_drop.index:\n",
+    "        dates_and_IDs[day.isoformat()].append(id)\n",
+    "    \n",
+    "    if index % 10 == 0:\n",
+    "        print(index)\n",
     "        \n",
-    "        # For timing\n",
-    "        if index % 250 == 0:\n",
-    "            print(index)\n",
-    "\n",
-    "    # Store to json\n",
-    "    with open(DATA_PATH + f'processed/cache/movers_intraday_p{percentage}{sign}_t{time_.strftime(\"%H%M\")}.json', 'w') as f: \n",
-    "        json.dump(dates_and_IDs, f)\n",
-    "\n",
-    "    return"
+    "# Store to json\n",
+    "with open('../data/output/dailyscreens/INTRADAY_MINUS_20PCT.json', 'w') as f: \n",
+    "    json.dump(dates_and_IDs, f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Top pre-market gappers at market open**\n",
+    "* Pre-market gap at least 30% (that is, premarket open to 9:30 AM)\n",
+    "* Pre-market turnover at least $1M\n",
+    "* Unadjusted price at least $0.10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7780\n"
+     ]
+    }
+   ],
    "source": [
-    "store_top_intraday_movers(sign = '+', percentage = 20, time_ = time(15, 55), start = date(2019, 1, 1), end = date(2023, 9, 1))"
+    "tickers = get_tickers()\n",
+    "tickers = tickers[tickers['type'].isin(['CS', 'ADRC'])]\n",
+    "\n",
+    "# Get list of market dates within our range\n",
+    "dates = get_market_dates()\n",
+    "dates = [day for day in dates if (day >= START_DATE and day <= END_DATE)]\n",
+    "dates_and_IDs = {day.isoformat(): list() for day in dates} # Create dictionary with empty lists\n",
+    "\n",
+    "for index, row in tickers.iterrows():\n",
+    "    id = row['ID']\n",
+    "    \n",
+    "    if id != 'ZVSA-2022-12-13':\n",
+    "        continue\n",
+    "\n",
+    "    m1 = get_data(id, START_DATE, END_DATE, timeframe=5, regular_hours_only=False, \\\n",
+    "                  columns=['open', 'close', 'volume', 'close_original'])\n",
+    "\n",
+    "    if m1.empty:\n",
+    "        continue\n",
+    "\n",
+    "    # Calculate variables needed in pre-market\n",
+    "    m1 = m1.between_time('4:00', '9:29')\n",
+    "    m1.index = m1.index.date\n",
+    "    m1['close_avg'] = m1['close']\n",
+    "    m1 = m1.groupby(m1.index).agg({\"open\": \"first\", \"close\": \"last\", \n",
+    "                                   \"close_original\": \"last\", \"close_avg\": \"mean\", \"volume\": \"sum\"})\n",
+    "    \n",
+    "    m1['turnover'] = m1['close_avg'] * m1['volume']\n",
+    "    m1['gap'] = (m1['close']/m1['open'] - 1)*100 # Base 100\n",
+    "    \n",
+    "    big_gap = m1[(m1['gap'] >= 30) \\\n",
+    "               & (m1['close_original'] >= 0.10)\\\n",
+    "               & (m1['turnover'] >= 10e6)]\n",
+    "    \n",
+    "    for day in big_gap.index:\n",
+    "        dates_and_IDs[day.isoformat()].append(id)\n",
+    "    \n",
+    "    if index % 10 == 0:\n",
+    "        print(index)\n",
+    "\n",
+    "# # Store to json\n",
+    "# with open('../data/output/dailyscreens/PREMKT_GAP_30PCT.json', 'w') as f: \n",
+    "#     json.dump(dates_and_IDs, f)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Top gappers at market open**\n",
+    "* Gap at least 30% (that is, previous day regular close to 9:30 AM)\n",
+    "* Pre-market turnover at least $1M\n",
+    "* Unadjusted price at least $0.10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ZVSA-2022-12-13'"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_id('ZVSA')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TO DO\n",
+    "* Instead of utils.py, spread it across 3 files just as with the backtester\n",
+    "* Then update the notebook files accordingly\n",
+    "* Top gappers\n",
+    "* Do some gap analysis\n",
+    "    * Recreate some charts from daytradingzoo\n",
+    "    * Recreate a spikeet-style file\n",
+    "* Build the loop-based backtester"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
