--- a/13_backtester_loop.ipynb
+++ b/13_backtester_loop.ipynb
@@ -32,6 +32,21 @@
     "            # Append trade log, research log, portfolio log, order log\n",
     "    # Record portfolio value"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I am going to show the flexibility and will backtest the following systems:\n",
+    "* Pre-market gap short with 10% stoploss and hold to EOD\n",
+    "* IBS strategy on SPY, with realistic entries (that is, not exactly at market close but 1 minute before)\n",
+    "* Every week, buy the 5 stocks in the T500 that have the largest distance to the moving average"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
