Aligned gappers with spikeet output

--- a/11_screeners.ipynb
+++ b/11_screeners.ipynb
@@ -12,12 +12,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils import remove_extended_hours, get_market_dates, get_market_calendar, get_tickers, get_data, \\\n",
-    "    first_trading_date_after_equal, first_trading_date_after, get_id, last_trading_date_before, last_trading_date_before_equal\n",
+    "from data import get_data\n",
+    "from tickers import get_tickers, get_id\n",
+    "from times import  first_trading_date_after_equal, first_trading_date_after, last_trading_date_before, \\\n",
+    "    last_trading_date_before_equal, get_market_calendar, get_market_dates\n",
+    "\n",
     "from datetime import datetime, date, timedelta, time\n",
     "from dateutil.relativedelta import relativedelta\n",
     "import mplfinance as mpf\n",
@@ -171,13 +174,10 @@
     "    m1_open_close['change'] = (1 - m1_open_close['close']/m1_open_close['open'])*100 # Base 100\n",
     "    big_drop = m1_open_close[(m1_open_close['change'] < -20) \\\n",
     "                           & (m1_open_close['close_original'] >= 1.00)\\\n",
-    "                           & (m1_open_close['turnover'] >= 10e7)]\n",
+    "                           & (m1_open_close['turnover'] >= 1e7)]\n",
     "\n",
     "    for day in big_drop.index:\n",
     "        dates_and_IDs[day.isoformat()].append(id)\n",
-    "    \n",
-    "    if index % 10 == 0:\n",
-    "        print(index)\n",
     "        \n",
     "# Store to json\n",
     "with open('../data/output/dailyscreens/INTRADAY_MINUS_20PCT.json', 'w') as f: \n",
@@ -191,22 +191,69 @@
     "**Top pre-market gappers at market open**\n",
     "* Pre-market gap at least 30% (that is, premarket open to 9:30 AM)\n",
     "* Pre-market turnover at least $1M\n",
-    "* Unadjusted price at least $0.10"
+    "* Unadjusted price at least $1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7780\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "# tickers = get_tickers()\n",
+    "# tickers = tickers[tickers['type'].isin(['CS', 'ADRC'])]\n",
+    "\n",
+    "# # Get list of market dates within our range\n",
+    "# dates = get_market_dates()\n",
+    "# dates = [day for day in dates if (day >= START_DATE and day <= END_DATE)]\n",
+    "# dates_and_IDs = {day.isoformat(): list() for day in dates} # Create dictionary with empty lists\n",
+    "\n",
+    "# for index, row in tickers.iterrows():\n",
+    "#     id = row['ID']\n",
+    "\n",
+    "#     m1 = get_data(id, START_DATE, END_DATE, timeframe=5, regular_hours_only=False, \\\n",
+    "#                   columns=['open', 'close', 'volume', 'close_original'])\n",
+    "\n",
+    "#     if m1.empty:\n",
+    "#         continue\n",
+    "\n",
+    "#     # Calculate variables needed in pre-market\n",
+    "#     m1 = m1.between_time('4:00', '9:29')\n",
+    "#     m1.index = m1.index.date\n",
+    "#     m1['close_avg'] = m1['close']\n",
+    "#     m1 = m1.groupby(m1.index).agg({\"open\": \"first\", \"close\": \"last\", \n",
+    "#                                    \"close_original\": \"last\", \"close_avg\": \"mean\", \"volume\": \"sum\"})\n",
+    "    \n",
+    "#     m1['turnover'] = m1['close_avg'] * m1['volume']\n",
+    "#     m1['gap'] = (m1['close']/m1['open'] - 1)*100 # Base 100\n",
+    "    \n",
+    "#     big_gap = m1[(m1['gap'] >= 30) \\\n",
+    "#                & (m1['close_original'] >= 1.00)\\\n",
+    "#                & (m1['turnover'] >= 1e6)]\n",
+    "    \n",
+    "#     for day in big_gap.index:\n",
+    "#         dates_and_IDs[day.isoformat()].append(id)\n",
+    "    \n",
+    "# # # Store to json\n",
+    "# with open('../data/output/dailyscreens/PREMKT_GAP_30PCT.json', 'w') as f: \n",
+    "#     json.dump(dates_and_IDs, f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Top gappers at market open**\n",
+    "* Gap at least 30% (previous day regular close until 9:30 AM (9:30 AM is the close of the bar at 9:25 for 5-min and 9:29 for 1-min))\n",
+    "* Pre-market turnover at least $1M\n",
+    "* Unadjusted price at least $1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "tickers = get_tickers()\n",
     "tickers = tickers[tickers['type'].isin(['CS', 'ADRC'])]\n",
@@ -218,69 +265,52 @@
     "\n",
     "for index, row in tickers.iterrows():\n",
     "    id = row['ID']\n",
-    "    \n",
-    "    if id != 'ZVSA-2022-12-13':\n",
-    "        continue\n",
     "\n",
     "    m1 = get_data(id, START_DATE, END_DATE, timeframe=5, regular_hours_only=False, \\\n",
-    "                  columns=['open', 'close', 'volume', 'close_original'])\n",
+    "                  columns=['close', 'volume', 'close_original'])\n",
+    "    d1 = get_data(id, START_DATE, END_DATE, timeframe='daily', regular_hours_only=True, \\\n",
+    "                  columns=['close'])\n",
     "\n",
     "    if m1.empty:\n",
     "        continue\n",
     "\n",
-    "    # Calculate variables needed in pre-market\n",
+    "    # To get the previous close\n",
+    "    d1['prev_close'] = d1['close'].shift(1)\n",
+    "    d1.index = d1.index.date\n",
+    "\n",
+    "    # To get current open and pre-market volume\n",
     "    m1 = m1.between_time('4:00', '9:29')\n",
     "    m1.index = m1.index.date\n",
     "    m1['close_avg'] = m1['close']\n",
-    "    m1 = m1.groupby(m1.index).agg({\"open\": \"first\", \"close\": \"last\", \n",
-    "                                   \"close_original\": \"last\", \"close_avg\": \"mean\", \"volume\": \"sum\"})\n",
-    "    \n",
-    "    m1['turnover'] = m1['close_avg'] * m1['volume']\n",
-    "    m1['gap'] = (m1['close']/m1['open'] - 1)*100 # Base 100\n",
-    "    \n",
-    "    big_gap = m1[(m1['gap'] >= 30) \\\n",
-    "               & (m1['close_original'] >= 0.10)\\\n",
-    "               & (m1['turnover'] >= 10e6)]\n",
+    "    d1_premkt = m1.groupby(m1.index).agg({\"close\": \"last\", # This close is the 9:30 time\n",
+    "                                   \"close_original\": \"last\", \n",
+    "                                   \"close_avg\": \"mean\", \n",
+    "                                   \"volume\": \"sum\"})\n",
+    "    d1_premkt['turnover'] = d1_premkt['close_avg'] * d1_premkt['volume']\n",
+    "\n",
+    "    # Calculate gap\n",
+    "    gaps = d1_premkt.merge(d1[['prev_close']], left_index=True, right_index=True)\n",
+    "    gaps['gap'] = (gaps['close']/gaps['prev_close'] - 1)*100 # Base 100\n",
+    "\n",
+    "    big_gap = gaps[(gaps['gap'] >= 30) \\\n",
+    "               & (gaps['close_original'] >= 1.00)\\\n",
+    "               & (gaps['turnover'] >= 1e6)]\n",
     "    \n",
     "    for day in big_gap.index:\n",
     "        dates_and_IDs[day.isoformat()].append(id)\n",
-    "    \n",
-    "    if index % 10 == 0:\n",
-    "        print(index)\n",
     "\n",
     "# # Store to json\n",
-    "# with open('../data/output/dailyscreens/PREMKT_GAP_30PCT.json', 'w') as f: \n",
-    "#     json.dump(dates_and_IDs, f)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Top gappers at market open**\n",
-    "* Gap at least 30% (that is, previous day regular close to 9:30 AM)\n",
-    "* Pre-market turnover at least $1M\n",
-    "* Unadjusted price at least $0.10"
+    "with open('../data/output/dailyscreens/GAP_30PCT.json', 'w') as f: \n",
+    "    json.dump(dates_and_IDs, f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'ZVSA-2022-12-13'"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "get_id('ZVSA')"
+    "gaps[gaps.index >= date(2024, 2, 8)]"
    ]
   },
   {
@@ -288,7 +318,10 @@
    "metadata": {},
    "source": [
     "TO DO\n",
+    "* Check gap up 30%\n",
+    "* Intraday parabolic 20%\n",
     "* Instead of utils.py, spread it across 3 files just as with the backtester\n",
+    "* Improve some functions to decrease repetitive code\n",
     "* Then update the notebook files accordingly\n",
     "* Top gappers\n",
     "* Do some gap analysis\n",
@@ -301,6 +334,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'MLGO-2022-12-13'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_id('MLGO')"
+   ]
   }
  ],
  "metadata": {
